fix: flex direction column collapsing divs on IE11

--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,17 @@ aside .contact-button-list > .button-outline + .button-outline {
   .row > .card + .card {
     margin-top: 2em;
   }
+
+  /*
+  cards and columns overlap on small screen on IE11.
+  https://makandracards.com/makandra/54644-do-not-use-flex-1-or-flex-basis-0-inside-flex-direction-column-when-you-need-to-support-ie11
+  */
+  .row > .column {
+    flex: 1 1 auto;
+  }
+  .row > .card {
+    flex: 1 1 auto;
+  }
 }
 
 @media (max-width: 550px) {
